Fix image frame's fragmentation for vertical writing-mode
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect)
Tracking
()
People
(Reporter: TYLin, Unassigned)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
While working on bug 1748277, I add an assertion to assert the completeness of nsMathMLTokenFrame's children, and it bumps the assertion count.
The root cause is that nsImageFrame::Reflow [1] doesn't consider vertical writing-mode when fragmenting images, so we should rewrite it by using logical coordinates.
| Reporter | ||
Updated•3 years ago
|
| Reporter | ||
Comment 1•3 years ago
|
||
| Reporter | ||
Comment 2•3 years ago
•
|
||
Note that with layout.display-list.improve-fragmentation enabled by default, we currently can already fragment images in vertical writing-mode in printing. (Hence lower the severity to S4.)
Converting nsImageFrame::Reflow() code to logical coordinates is probably not sufficient. Some callers in image painting related code use nsImageFrame::GetContinuationOffset() to calculate the consumed height from previous continuations. It won't work in the vertical writing-modes. nsSplittableFrame::CalcAndCacheConsumedBSize() should be used instead.
| Reporter | ||
Comment 3•2 years ago
|
||
This is the screenshot of https://bug1805522.bmoattachments.org/attachment.cgi?id=9308103 (Note: the browser will crash without the fix in bug 1805522.)
The image doesn't render correctly. There should be only one asterisk.
Description
•