Remove ReflowOutput's physical accessors

ImageFrame::Reflow should be converted to vertical writing-mode (bug 1751260).