layout/generic/nsGfxScrollFrame.cpp
@@ -8,6 +8,7 @@
 
 #include "nsGfxScrollFrame.h"
 
+#include "mozilla/WritingModes.h"
 #include "mozilla/layers/LayersTypes.h"
 #include "nsIXULRuntime.h"
 #include "base/compiler_specific.h"
@@ -1428,13 +1429,16 @@ void nsHTMLScrollFrame::Reflow(nsPresContext* aPresContext,
   nsSize layoutSize = mHelper.mIsUsingMinimumScaleSize
                           ? mHelper.mMinimumScaleSize
                           : state.mInsideBorderSize;
-  aDesiredSize.Width() = layoutSize.width + state.mComputedBorder.LeftRight();
-  aDesiredSize.Height() = layoutSize.height + state.mComputedBorder.TopBottom();
+
+  const auto desiredWM = aDesiredSize.GetWritingMode();
+  aDesiredSize.SetSize(
+      desiredWM,
+      LogicalSize(desiredWM, layoutSize) +
+          LogicalMargin(desiredWM, state.mComputedBorder).Size(desiredWM));
 
   // Set the size of the frame now since computing the perspective-correct
   // overflow (within PlaceScrollArea) can rely on it.
-  SetSize(aDesiredSize.GetWritingMode(),
-          aDesiredSize.Size(aDesiredSize.GetWritingMode()));
+  SetSize(desiredWM, aDesiredSize.Size(desiredWM));
 
   // Restore the old scroll position, for now, even if that's not valid anymore
   // because we changed size. We'll fix it up in a post-reflow callback, because
